--- a/Lwarp-JFM/lwarpmk.conf
+++ b/Lwarp-JFM/lwarpmk.conf
@@ -1,15 +1,15 @@
 confversion = [[2]]
 opsystem = [[Unix]]
-sourcename = [[Sample_Lwarp_Xy-jax]]
-homehtmlfilename = [[Sample_Lwarp_Xy-jax]]
-htmlfilename = [[]]
-imagesdirectory = [[Sample_Lwarp_Xy-jax-images]]
+sourcename = [[Sample_Lwarp_Xy-jax-split]]
+homehtmlfilename = [[Sample_Lwarp_Xy-jax-split-index]]
+htmlfilename = [[Sample_Lwarp_Xy-jax-]]
+imagesdirectory = [[Sample_Lwarp_Xy-jax-split-images]]
 imagesname = [[image-]]
 latexmk = [[false]]
-printlatexcmd = [[pdflatex Sample_Lwarp_Xy-jax]]
-HTMLlatexcmd = [[pdflatex Sample_Lwarp_Xy-jax_html]]
-printindexcmd = [[makeindex -s lwarp.ist Sample_Lwarp_Xy-jax.idx]]
-HTMLindexcmd = [[makeindex -s lwarp.ist Sample_Lwarp_Xy-jax_html.idx]]
+printlatexcmd = [[pdflatex Sample_Lwarp_Xy-jax-split]]
+HTMLlatexcmd = [[pdflatex Sample_Lwarp_Xy-jax-split_html]]
+printindexcmd = [[makeindex -s lwarp.ist Sample_Lwarp_Xy-jax-split.idx]]
+HTMLindexcmd = [[makeindex -s lwarp.ist Sample_Lwarp_Xy-jax-split_html.idx]]
 latexmkindexcmd = [[makeindex -s lwarp.ist]]
 glossarycmd = [[makeglossaries]]
 pdftotextenc = [[UTF-8]]
